--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="edu.northeastern.numad22fa_jiazhechen">
 
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NUMAD22Fa_JiazheChen"
         tools:targetApi="31">
+        <activity
+            android:name=".LinkCollectorActivity"
+            android:exported="false" />
         <activity
             android:name=".ClickyClickyActivity"
             android:exported="false" />
